# Virtlyst

./: .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  example-config.ini
.github/workflows/: docker.yml
root/src/: 404.html  500.html  base.html  base_auth.html  console-base.html  console-spice.html  console-vnc.html  create.html  hostdetail.html  infrastructure.html  instance.html  instances.html  interface.html  interfaces.html  login.html  logout.html  network.html  networks.html  secrets.html  servers.html  sidebar.html  storage.html  storages.html
root/src/users/: change_password.html  create.html  index.html
root/static/css/: main.css  signin.css
root/static/js/: Chart.min.js  bootstrap-multiselect.js  infrastructure.js  jquery.tablesorter.js
root/static/js/novnc/: blue.css  playback.js  rfb.js  ui.js  util.js
root/static/js/spice-html5/: cursor.js  display.js  enums.js  main.js  playback.js  spiceconn.js  spicemsg.js
src/: CMakeLists.txt  console.cpp  console.h  create.cpp  create.h  info.cpp  info.h  infrastructure.cpp  infrastructure.h  instance.cpp  instance.h  instances.cpp  instances.h  interfaces.cpp  interfaces.h  networks.cpp  networks.h  overview.cpp  overview.h  root.cpp  root.h  secrets.cpp  secrets.h  server.cpp  server.h  sqluserstore.cpp  sqluserstore.h  storages.cpp  storages.h  users.cpp  users.h  virtlyst.cpp  virtlyst.h  ws.cpp  ws.h
src/lib/: connection.cpp  connection.h  domain.cpp  domain.h  domainsnapshot.cpp  domainsnapshot.h  interface.cpp  interface.h  network.cpp  network.h  nodedevice.cpp  nodedevice.h  secret.cpp  secret.h  storagepool.cpp  storagepool.h  storagevol.cpp  storagevol.h
